--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.3",
+    "@types/howler": "^2.2.1",
+    "howler": "^2.2.0",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
